kubernetes/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:management        
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: rabbitmqdata
      volumes:
      - name: rabbitmqdata
        persistentVolumeClaim:
          claimName: rabbitmqdata-claim
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: rbmq-msg-port
    port: 5672
    targetPort: 5672
  - name: rbmq-mgmt-port
    port: 15672
    targetPort: 15672

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: rbmq-msg-port
    port: 5672
    targetPort: 5672
  - name: rbmq-mgmt-port
    port: 15672
    targetPort: 15672
