kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: platform.acme.com
    http:
      paths:
      - path: /command-svc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: command-cluster-ip-service
            port:
              number: 80
      - path: /platform-svc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: platform-cluster-ip-service
            port:
              number: 80
